fix overflow

--- a/components/CodeTabs/style.scss
+++ b/components/CodeTabs/style.scss
@@ -52,6 +52,7 @@
 
       &:focus-visible {
         outline: 3px solid var(--color-focus-ring);
+        outline-offset: -3px;
       }
     }
   }
